Adding Scholar template

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,30 @@
 !/docs/apple-touch-icon.png
 !/docs/favicon-32x32.png
 !/docs/site.webmanifest
+!/docs/img/
+!/docs/img/*.jpg
+!/docs/img/*.png
+!/docs/img/*.webp
+!/docs/vendor/
+!/docs/vendor/bootstrap/
+!/docs/vendor/bootstrap/css/
+!/docs/vendor/bootstrap/css/bootstrap.min.css
+!/docs/vendor/bootstrap/js/
+!/docs/vendor/bootstrap/js/bootstrap.min.js
+!/docs/vendor/jquery/
+!/docs/vendor/jquery/jquery.*.js
+!/docs/vendor/jquery/jquery.*.map
+!/docs/assets/
+!/docs/assets/css/
+!/docs/assets/css/*.css
+!/docs/assets/images/
+!/docs/assets/images/*.jpg
+!/docs/assets/images/*.png
+!/docs/assets/js/
+!/docs/assets/js/*.js
+!/docs/assets/webfonts/
+!/docs/assets/webfonts/*.ttf
+!/docs/assets/webfonts/*.woff2
 !/src/
 !/src/*.pdf
 !/src/logos/
